[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/management/game.gd" type="Script" id=1]
[ext_resource path="res://scenes/player_scenes/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/player_scenes/orb.tscn" type="PackedScene" id=3]

[sub_resource type="SpatialMaterial" id=1]

render_priority = 0
flags_transparent = false
flags_unshaded = false
flags_vertex_lighting = false
flags_no_depth_test = false
flags_use_point_size = false
flags_world_triplanar = false
flags_fixed_size = false
flags_albedo_tex_force_srgb = false
vertex_color_use_as_albedo = false
vertex_color_is_srgb = false
params_diffuse_mode = 0
params_specular_mode = 0
params_blend_mode = 0
params_cull_mode = 0
params_depth_draw_mode = 0
params_line_width = 1.0
params_point_size = 1.0
params_billboard_mode = 0
params_grow = false
params_use_alpha_scissor = false
albedo_color = Color( 1, 1, 1, 1 )
metallic = 0.6
metallic_specular = 0.5
metallic_texture_channel = 0
roughness = 0.01
roughness_texture_channel = 0
emission_enabled = true
emission = Color( 1, 0, 0.609375, 1 )
emission_energy = 2.0
emission_operator = 0
emission_on_uv2 = false
normal_enabled = false
rim_enabled = false
clearcoat_enabled = false
anisotropy_enabled = false
ao_enabled = false
depth_enabled = false
subsurf_scatter_enabled = false
transmission_enabled = false
refraction_enabled = false
detail_enabled = false
uv1_scale = Vector3( 1, 1, 1 )
uv1_offset = Vector3( 0, 0, 0 )
uv1_triplanar = false
uv1_triplanar_sharpness = 1.0
uv2_scale = Vector3( 1, 1, 1 )
uv2_offset = Vector3( 0, 0, 0 )
uv2_triplanar = false
uv2_triplanar_sharpness = 1.0
proximity_fade_enable = false
distance_fade_enable = true
distance_fade_min_distance = 0.0
distance_fade_max_distance = 1.0
_sections_unfolded = [ "Emission" ]

[node name="game" type="Spatial"]

script = ExtResource( 1 )

[node name="player1" type="Spatial" parent="." index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 11, 0 )
_sections_unfolded = [ "Transform" ]

[node name="player" parent="player1" index="0" groups=[
"p1",
] instance=ExtResource( 2 )]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, -3 )
collision_layer = 2
collision_mask = 9
_sections_unfolded = [ "Collision", "Transform" ]

[node name="cam_y" parent="player1/player" index="0"]

editor/display_folded = true
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 0, 0.5, 0 )

[node name="camera" parent="player1/player/cam_y/cam_x" index="0"]

cull_mask = 1048567

[node name="orb" parent="player1" index="1" instance=ExtResource( 3 )]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, -3 )
collision_layer = 0
collision_mask = 17

[node name="player2" type="Spatial" parent="." index="1"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 11, 0 )
_sections_unfolded = [ "Transform" ]

[node name="player" parent="player2" index="0" groups=[
"p2",
] instance=ExtResource( 2 )]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 3 )
collision_layer = 4
collision_mask = 17
_sections_unfolded = [ "Collision", "Transform" ]

[node name="cam_y" parent="player2/player" index="0"]

transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 0, 0.5, 0 )

[node name="camera" parent="player2/player/cam_y/cam_x" index="0"]

cull_mask = 1048559
current = true

[node name="orb" parent="player2" index="1" instance=ExtResource( 3 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 3 )
collision_layer = 0
collision_mask = 9

[node name="mesh" parent="player2/orb" index="0"]

material/0 = SubResource( 1 )


[editable path="player1/player"]
[editable path="player1/orb"]
[editable path="player2/player"]
[editable path="player2/orb"]
